<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MultiPage</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="justroids">JustRoids</string>
    <string name="feed1">Feed1</string>
    <string name="feed2">Feed2</string>
    <string name="feed3">Feed3</string>
    <string name="newfeed">New Feed1</string>
    <string name="newfeed2">New Feed2</string>
    <string name="newfeed3">New Feed3</string>
    <string name="intro">Enter your Twitter search term</string>
	<string name="clickrefresh">Click to Refresh</string>
    <string name="hint">Search Term</string>
    <string name="search_label">Add New Feed</string>
    <string name="placeholder">---</string>
    <string name="refresh"> Refresh </string>
</resources>