<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JustRoidsActivity" >

    <TextView
        android:id="@+id/intro_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/intro"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/search_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#ffff66"
        android:hint="@string/hint"
        android:inputType="text"
        android:padding="10dp" />

  	
  	<Button
  	    android:id="@+id/search_btn"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_alignBaseline="@+id/search_edit"
  	    android:layout_alignBottom="@+id/search_edit"
  	    android:layout_alignRight="@+id/search_edit"
  	    android:layout_margin="5dp"
  	    android:onClick="searchTwitter"
  	    android:text="@string/search_label" />
  	
  	<ScrollView 
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:layout_below="@+id/search_btn">

        <TextView
            android:id="@+id/tweet_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="5dp"
            android:background="#330000"
            android:freezesText="true"
            android:padding="10dp"
            android:text="@string/placeholder"
            android:textColor="#ffffff" 
         />
   
     </ScrollView>

</RelativeLayout>
